--- a/pom.xml
+++ b/pom.xml
@@ -15,41 +15,50 @@ http://maven.apache.org/maven-v4_0_0.xsd
 		<sourceDirectory>src</sourceDirectory>
 	</build>
 	
-	<dependencies>
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-surefire-report-plugin</artifactId>
-  <version>2.20</version>
-  <type>maven-plugin</type>
-</dependency>
 
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-pmd-plugin</artifactId>
-  <version>3.8</version>
-  <type>maven-plugin</type>
-</dependency>
-
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
+	 <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>3.8</version>
+      </plugin>
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>3.8</version>		
+      </plugin>
+	   <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-javadoc-plugin</artifactId>
-  <version>2.10.4</version>
-  <type>maven-plugin</type>
-</dependency>
-
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
+  <version>2.10.4</version>	
+      </plugin>
+	  <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-checkstyle-plugin</artifactId>
   <version>2.17</version>
-  <type>maven-plugin</type>
-</dependency>
-
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+	   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-jxr-plugin</artifactId>
   <version>2.5</version>
-  <type>maven-plugin</type>
-</dependency>
+      </plugin>
+    </plugins>
+	
+	
+      
+	
+  </reporting>
+	
+	
+	
+	
+	
+	<dependencies>
+
+
+
+
 
 
   </dependencies>
